argocd/resources/quantum-platform/user-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantum-platform-user-api
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app.kubernetes.io/name: quantum-platform-user-api

  ports:
    - name: http
      port: 8000
      targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantum-platform-user-api
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 2

  selector:
    matchLabels:
      app.kubernetes.io/name: quantum-platform-user-api

  template:
    metadata:
      labels:
        app.kubernetes.io/name: quantum-platform-user-api
        app.kubernetes.io/part-of: quantum-platform

    spec:
      containers:
        - name: user-api
          image: quantum-platform-user-api
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8000

          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /api/v1/health/
              port: http
              httpHeaders:
                - name: Host
                  value: quantum.nyameko.com
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              memory: 768Mi

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - ALL
