argocd/resources/quantum-platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: quantum-platform
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - blog.nyameko.com
        - quantum.nyameko.com
      secretName: quantum-platform-tls

  rules:
    - host: blog.nyameko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quantum-platform-blog
                port:
                  number: 8080

    - host: quantum.nyameko.com
      http:
        paths:
          - path: /_allauth
            pathType: Prefix
            backend:
              service:
                name: quantum-platform-user-api
                port:
                  number: 8000

          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: quantum-platform-user-api
                port:
                  number: 8000

          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: quantum-platform-user-api
                port:
                  number: 8000

          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: quantum-platform-user-api
                port:
                  number: 8000

          - path: /static
            pathType: Prefix
            backend:
              service:
                name: quantum-platform-user-api
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: quantum-platform-users
                port:
                  number: 8080
